// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconPuzzlePieceCircle should correctly render default icon with default color 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePieceCircle"
  height={32}
  viewBox="0 0 28 28"
  width={32}
>
  <rect
    fill="none"
    height="27"
    rx="13.5"
    stroke="#0061d5"
    width="27"
    x=".5"
    y=".5"
  />
  <path
    d="M8.4 10.695v3.028c.17.85.646.933 1.153.804.312-.375.78-.615 1.306-.615a1.703 1.703 0 0 1 0 3.405c-.525 0-.994-.24-1.306-.615-.507-.129-.983-.046-1.153.804v3.027h9.838v-3.027c.17-.85.646-.933 1.153-.804.312.375.78.615 1.306.615a1.703 1.703 0 0 0 0-3.405c-.526 0-.994.24-1.306.615-.507.129-.983.046-1.153-.804v-3.028H15.21c-.851-.17-.933-.645-.804-1.152a1.703 1.703 0 1 0-2.79-1.307c0 .526.24.994.614 1.307.13.507.047.982-.804 1.152H8.4z"
    fill="none"
    stroke="#0061d5"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPuzzlePieceCircle should correctly render icon with custom class name 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePieceCircle circular"
  height={32}
  viewBox="0 0 28 28"
  width={32}
>
  <rect
    fill="none"
    height="27"
    rx="13.5"
    stroke="#0061d5"
    width="27"
    x=".5"
    y=".5"
  />
  <path
    d="M8.4 10.695v3.028c.17.85.646.933 1.153.804.312-.375.78-.615 1.306-.615a1.703 1.703 0 0 1 0 3.405c-.525 0-.994-.24-1.306-.615-.507-.129-.983-.046-1.153.804v3.027h9.838v-3.027c.17-.85.646-.933 1.153-.804.312.375.78.615 1.306.615a1.703 1.703 0 0 0 0-3.405c-.526 0-.994.24-1.306.615-.507.129-.983.046-1.153-.804v-3.028H15.21c-.851-.17-.933-.645-.804-1.152a1.703 1.703 0 1 0-2.79-1.307c0 .526.24.994.614 1.307.13.507.047.982-.804 1.152H8.4z"
    fill="none"
    stroke="#0061d5"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPuzzlePieceCircle should correctly render icon with specified color 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePieceCircle"
  height={32}
  viewBox="0 0 28 28"
  width={32}
>
  <rect
    fill="none"
    height="27"
    rx="13.5"
    stroke="#fcfcfc"
    width="27"
    x=".5"
    y=".5"
  />
  <path
    d="M8.4 10.695v3.028c.17.85.646.933 1.153.804.312-.375.78-.615 1.306-.615a1.703 1.703 0 0 1 0 3.405c-.525 0-.994-.24-1.306-.615-.507-.129-.983-.046-1.153.804v3.027h9.838v-3.027c.17-.85.646-.933 1.153-.804.312.375.78.615 1.306.615a1.703 1.703 0 0 0 0-3.405c-.526 0-.994.24-1.306.615-.507.129-.983.046-1.153-.804v-3.028H15.21c-.851-.17-.933-.645-.804-1.152a1.703 1.703 0 1 0-2.79-1.307c0 .526.24.994.614 1.307.13.507.047.982-.804 1.152H8.4z"
    fill="none"
    stroke="#fcfcfc"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPuzzlePieceCircle should correctly render icon with specified width and height and default viewBox value 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePieceCircle"
  height={16}
  viewBox="0 0 28 28"
  width={16}
>
  <rect
    fill="none"
    height="27"
    rx="13.5"
    stroke="#0061d5"
    width="27"
    x=".5"
    y=".5"
  />
  <path
    d="M8.4 10.695v3.028c.17.85.646.933 1.153.804.312-.375.78-.615 1.306-.615a1.703 1.703 0 0 1 0 3.405c-.525 0-.994-.24-1.306-.615-.507-.129-.983-.046-1.153.804v3.027h9.838v-3.027c.17-.85.646-.933 1.153-.804.312.375.78.615 1.306.615a1.703 1.703 0 0 0 0-3.405c-.526 0-.994.24-1.306.615-.507.129-.983.046-1.153-.804v-3.028H15.21c-.851-.17-.933-.645-.804-1.152a1.703 1.703 0 1 0-2.79-1.307c0 .526.24.994.614 1.307.13.507.047.982-.804 1.152H8.4z"
    fill="none"
    stroke="#0061d5"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPuzzlePieceCircle should correctly render icon with title 1`] = `
<AccessibleSVG
  className="bdl-IconPuzzlePieceCircle"
  height={32}
  title="abcde"
  viewBox="0 0 28 28"
  width={32}
>
  <rect
    fill="none"
    height="27"
    rx="13.5"
    stroke="#0061d5"
    width="27"
    x=".5"
    y=".5"
  />
  <path
    d="M8.4 10.695v3.028c.17.85.646.933 1.153.804.312-.375.78-.615 1.306-.615a1.703 1.703 0 0 1 0 3.405c-.525 0-.994-.24-1.306-.615-.507-.129-.983-.046-1.153.804v3.027h9.838v-3.027c.17-.85.646-.933 1.153-.804.312.375.78.615 1.306.615a1.703 1.703 0 0 0 0-3.405c-.526 0-.994.24-1.306.615-.507.129-.983.046-1.153-.804v-3.028H15.21c-.851-.17-.933-.645-.804-1.152a1.703 1.703 0 1 0-2.79-1.307c0 .526.24.994.614 1.307.13.507.047.982-.804 1.152H8.4z"
    fill="none"
    stroke="#0061d5"
  />
</AccessibleSVG>
`;
